# locational-damage-plugin

./: CMakeLists.txt  LICENSE.txt  LocationalDamage.cpp  LocationalDamage.h  exports.def  ldplugin.sln  ldplugin.vcxproj  main.cpp  plugin.cpp
src/: LocationalDamage.cpp  LocationalDamage.h
